<resources>
    <string name="app_name">MovieApp</string>
    <string name="details">Details</string>
    <string name="movie_name">Movie Name</string>
    <string name="image_of_the_movie">Image Of The Movie</string>
    <string name="backbutton">BackButton</string>
    <string name="the_overview_of_the_movie">The overview of the movie</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="vote_count">Vote count</string>
    <string name="release_date">Release date</string>
    <string name="budget">BUDGET</string>
    <string name="revenue">Revenue</string>
    <string name="revenue_caps">REVENUE</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="_1">1</string>
    <string name="movie_image">Movie Image</string>
</resources>
